introduction section rephrased

--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -23,7 +23,8 @@ This is part 1 of the series on Gradient Descent.
 
 # Introduction
 
-Remember in <Link to="/blog/linear-regression">the Linear Regression post</Link>, I mentioned that we can use gradient descent to descrease the MSE of a Linear Regression model.
+Remember in <Link to="/blog/linear-regression">the Linear Regression post</Link>, 
+I mentioned that we can use A Gradient Descent algorithm to minimize the loss function, in this case the Mean Squared Error valuem, of a Linear Regression model.
 Let's see how it works at a glance.
 
 Assume we have random data points like in the following graph.
