Fix BGD content

--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -167,6 +167,10 @@ Let's animate the movement of the regression lines.
 
 ![Regression line animation](./gd.gif)
 
+Now, let's see how the movement of the intercept and the coefficient variabels on a contour map.
+
+![The movement of the intercept and the coefficient variabels on a contour map](./contour_map.png)
+
 # Conclusion
 
 Here are some keypoints for Batch Gradient Descent.
