Fix MBGD content

--- a/content/blog/part-3-mini-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-mini-batch-gradient-descent/index.mdx
@@ -141,11 +141,12 @@ I am sure since the cost function follows a zig-zag pattern, the regression line
 
 However, it's not noticeable the pattern movement in the animation. If somebody can explain me in details on why this is happening, do not hesitate to send me an email.
 
-Now, let's see how the cost function looks like in a contour map.
+Now, let's see how the movement of the intercept and the coefficient variabels on a contour map.
 
-![MSE Contour Map](./contour_map.png)
+![The movement of the intercept and the coefficient variabels on a contour map](./contour_map.png)
 
-In the right figure above, the zoomed in one in particular, the line looks like is walking up the stairs. 
+If you compare the contour map in the BGD page, you will notice that the contour map made by BGD is much more smooth.
+Unlike the one in BGD, the size of the line above is thicker, and it looks like is walking up the stairs. 
 
 # Conclusion
 
