Fix MBGD content

--- a/content/blog/part-3-mini-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-mini-batch-gradient-descent/index.mdx
@@ -76,7 +76,7 @@ First, the initial point is set to be $(2.0, -7.5)$ because I want our initial g
 
 After that, the batches will be created just before the `for-loop` started. The parameter updates will happen in the `for-loop` over time.
 
-# Mean Square Error
+# Mean Squared Error
 
 In the previous section, I just explained on how to implement MBGD in Python.
 Now, let's find out what we can get from this experimentation.
