Fix BGD content

--- a/content/blog/part-2-batch-gradient-descent/index.mdx
+++ b/content/blog/part-2-batch-gradient-descent/index.mdx
@@ -161,15 +161,15 @@ After 10,000 iterations, the MSE value of our own Gradient Descent is $0.195$ wh
 
 Combining everything, here is how the regression line changes over time.
 
-![Regression line changes over time](./overall.png)
+![Regression line changes over time](./regression-lines.png)
 
 Let's animate the movement of the regression lines.
 
-![Regression line animation](./gd.gif)
+![Regression line animation](./bgd.gif)
 
 Now, let's see how the movement of the intercept and the coefficient variabels on a contour map.
 
-![The movement of the intercept and the coefficient variabels on a contour map](./contour_map.png)
+![The movement of the intercept and the coefficient variabels on a contour map](./contour.png)
 
 # Conclusion
 
