Fix MBGD content

--- a/content/blog/part-3-mini-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-mini-batch-gradient-descent/index.mdx
@@ -137,13 +137,13 @@ There will be two graphs, one contains how the regression line movement pattern 
 
 I am sure since the cost function follows a zig-zag pattern, the regression line moves in a zig-zag pattern as well like a graph shown above.
 
-![Regression Line Movements](./movements.gif)
+![Regression Line Movements](./mbgd.gif)
 
 However, it's not noticeable the pattern movement in the animation. If somebody can explain me in details on why this is happening, do not hesitate to send me an email.
 
 Now, let's see how the movement of the intercept and the coefficient variabels on a contour map.
 
-![The movement of the intercept and the coefficient variabels on a contour map](./contour_map.png)
+![The movement of the intercept and the coefficient variabels on a contour map](./contour.png)
 
 If you compare the contour map in the BGD page, you will notice that the contour map made by BGD is much more smooth.
 Unlike the one in BGD, the size of the line above is thicker, and it looks like is walking up the stairs. 
