Fix MBGD content

--- a/content/blog/part-3-mini-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-mini-batch-gradient-descent/index.mdx
@@ -133,7 +133,7 @@ So, there is no clear answer to this question. I personally think it's all down 
 
 There will be two graphs, one contains how the regression line movement pattern over $n$ number of updates, and the other is the animation of the regression line movements.
 
-![Regression Lines](./regression_lines.png)
+![Regression Lines](./regression-lines.png)
 
 I am sure since the cost function follows a zig-zag pattern, the regression line moves in a zig-zag pattern as well like a graph shown above.
 
