--- a/content/blog/part-4-stochastic-gradient-descent/index.mdx
+++ b/content/blog/part-4-stochastic-gradient-descent/index.mdx
@@ -26,7 +26,7 @@ This is part 3 of the series on Gradient Descent.
 Previously, we have learned that BGD updates $\beta_0$ and $\beta_1$ only after it has seen the entire dataset. 
 As for MBGD, it only updates them after it has seen a fraction of of the entire dataset.
 
-In this post, we are going to implement another variation of Gradient Descent called Stochastic Gradient Descent, and now I am going to call it SGD throught this post.
+In this post, we are going to implement another variation of Gradient Descent called Stochastic Gradient Descent, and now I am going to call it SGD throughout this post.
 
 # Introduction
 
